k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    env: dev
    service: autovyn-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    env: prod
    service: autovyn-app
