k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autovyn-worker
  namespace: dev
  labels:
    app: autovyn-worker
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autovyn-worker
  template:
    metadata:
      labels:
        app: autovyn-worker
        env: dev
    spec:
      containers:
      - name: worker
        image: us-central1-docker.pkg.dev/gcp-assignment-471905/gcp-assignment-repo/worker:latest
        ports:
        - containerPort: 9091
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 9091
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 9091
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
