k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autovyn-frontend-service
  namespace: dev
spec:
  selector:
    app: autovyn-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
